# Exercicios-Maratona

./: CMakeLists.txt
maratonaIF2025/estudosC++/: busca_iterador.cpp  busca_profunda.cpp  ordena_alunos.cpp  testes.cpp
maratonaIF2025/resolucoes/: detetive.cpp  falha.cpp  tempo.cpp
obi2024/Semana2/js/: jogo.js  nota.js  wifi.js
obi2024/Semana3/js/: visita.js  visita.txt
