cmake_minimum_required(VERSION 3.27)
project(Exercicios_Maratona)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exercicios_Maratona main.cpp)

add_executable(figurinhas obi2024/Semana1/figurinhas.cpp)
add_executable(segredo-cofre obi2024/Semana1/segredo-cofre.cpp)
add_executable(figurinhas-otimizado obi2024/Semana1/figurinhas-otimizado.cpp)
add_executable(jogo obi2024/Semana2/jogo.cpp)
add_executable(nota obi2024/Semana2/nota.cpp)
add_executable(wifi obi2024/Semana2/wifi.cpp)
add_executable(visita obi2024/Semana3/visita.cpp)
add_executable(chuvaH obi2024/Semana4/henrique/chuva.cpp)
add_executable(torneio obi2024/Semana5/allysson/torneio.cpp)
add_executable(tempo obi2024/Semana5/allysson/tempo.cpp)
add_executable(torneioH obi2024/Semana5/henrique/torneio.cpp)
add_executable(tempoH obi2024/Semana5/henrique/tempo.cpp)
add_executable(zero obi2024/Semana5/allysson/zero.cpp)
add_executable(zeroH obi2024/Semana5/henrique/zero.cpp)
add_executable(chuva obi2024/Semana4/allysson/chuva.cpp)
add_executable(baralho obi2024/Semana5/allysson/baralho.cpp)
add_executable(paciente obi2024/Semana5/allysson/paciente.cpp)
add_executable(musica obi2024/Semana5/allysson/musica.cpp)
add_executable(rodoviaRecursiva obi2024/Semana6/allysson/rodoviaRecursiva.cpp)
add_executable(rodovia obi2024/Semana6/allysson/rodovia.cpp)
add_executable(detetive obi2024/Semana6/allysson/detetive.cpp)
add_executable(tita obi2024/Semana7/allysson/tita.cpp)
add_executable(cloud obi2024/Semana7/allysson/cloud.cpp)
add_executable(labirintos obi2024/Semana7/allysson/labirintos.cpp)
add_executable(vagoes obi2024/Semana8/vagoes.cpp)
add_executable(ordena_alunos maratonaIF2025/estudosC++/ordena_alunos.cpp)
add_executable(busca_iterador maratonaIF2025/estudosC++/busca_iterador.cpp)
add_executable(busca_profunda maratonaIF2025/estudosC++/busca_profunda.cpp)
add_executable(testes maratonaIF2025/estudosC++/testes.cpp)
add_executable(falha maratonaIF2025/resolucoes/falha.cpp
        maratonaIF2025/resolucoes/tempo.cpp)
add_executable(tempo2 maratonaIF2025/resolucoes/tempo.cpp)
